# Home_Work_Web_13

./: .gitignore  pyproject.toml  pyvenv.cfg
Home_Work_13/: pyproject.toml
Home_Work_13/alembic/: env.py
Home_Work_13/home_work_13/: main.py
Home_Work_13/home_work_13/app/database/: auth.py  db.py  models.py
Home_Work_13/home_work_13/app/models/: base.py  todo.py  users.py
Home_Work_13/home_work_13/app/repository/: adress_book.py  todos.py  user.py
Home_Work_13/home_work_13/app/routes/: adress_book.py  todo_items.py  users.py
Home_Work_13/home_work_13/app/schemas/: schemas.py  user.py
Home_Work_13/home_work_13/app/services/: todo.py  users.py
Home_Work_Web_13/: pyvenv.cfg
Home_Work_Web_13/Scripts/: activate  activate.bat
